--- a/calorias.html
+++ b/calorias.html
@@ -2675,6 +2675,7 @@
 		</div>
 	</div>
 </div>
+				</div>
             </div>
 				<div class="section form-section">
 					<h2>Añadir Alimento Nuevo</h2><select id="mealType" style="width: 100%; padding: 8px; margin-bottom: 10px; border-radius: 4px;">
