--- a/calorias.html
+++ b/calorias.html
@@ -2520,19 +2520,19 @@
 	</div>
 	<div class="meal-content" id="salsas">
 		<input class="search-box" onkeyup="filterFoods('salsas', this.value)" placeholder="Buscar salsas..." type="text">
-		<div class="food-item" data-calories="82" data-carbs="14.2" data-default-weight="100" data-fat="0.4" data-protein="1.8" data-saturatedfat="0.1">
-			<span>Salsa de Tomate</span>
+		<div class="food-item" data-calories="60" data-carbs="13" data-default-weight="100" data-fat="0.5" data-protein="1.3" data-saturatedfat="0.1">
+			<span>ketchup</span>
 			<div class="food-quantity">
 				<input class="quantity-input" min="1" type="number" value="1">
 				<button class="details-btn" onclick="toggleDetails(this)">+</button>
 				<button onclick="addPredefinedFood(this)">Agregar</button>
 			</div>
 			<div class="food-details">
-				<p>Kilocalorías: 82 kcal</p>
-				<p>Proteínas: 1.8 g</p>
-				<p>Grasas: 0.4 g</p>
+				<p>Kilocalorías: 60 kcal</p>
+				<p>Proteínas: 1.3 g</p>
+				<p>Grasas: 0.5 g</p>
 				<p>Grasas saturadas: 0.1 g</p>
-				<p>Carbohidratos: 14.2 g</p>
+				<p>Carbohidratos: 13 g</p>
 				<p>Peso por unidad: 100 g</p>
 				<input class="weight-input" min="1" placeholder="Peso en gramos" type="number" value="100">
 			</div>
