--- a/calorias.html
+++ b/calorias.html
@@ -1416,6 +1416,20 @@
 								<p>Peso por unidad: 31 g✅(cada una)</p><input class="weight-input" min="1" placeholder="Peso en gramos" type="number" value="31">
 							</div>
 						</div>
+						<div class="food-item" data-calories="225" data-carbs="4" data-default-weight="100" data-fat="16" data-protein="20" data-saturatedfat="6">
+							<span>pelota </span>
+							<div class="food-quantity">
+								<input class="quantity-input" min="1" type="number" value="1"> <button class="details-btn" onclick="toggleDetails(this)">+</button> <button onclick="addPredefinedFood(this)">Agregar</button>
+							</div>
+							<div class="food-details">
+								<p>Kilocalorías: 225 kcal</p>
+								<p>Proteínas: 20 g</p>
+								<p>Grasas: 16 g</p>
+								<p>Grasas saturadas: 6 g</p>
+								<p>Carbohidratos: 4 g</p>
+								<p>Peso por unidad: 100 g ✅</p><input class="weight-input" min="1" placeholder="Peso en gramos" type="number" value="125">
+							</div>
+						</div>
 						<div class="food-item" data-calories="245" data-carbs="1.70" data-default-weight="30" data-fat="19.40" data-protein="15.90" data-saturatedfat="7.80">
 							<span>nonganiza</span>
 							<div class="food-quantity">
@@ -1832,18 +1846,18 @@
 										<p>Peso por unidad: 25 g (1 rebanada)</p><input class="weight-input" min="1" placeholder="Peso en gramos" type="number" value="25">
 									</div>
 								</div>
-								<div class="food-item" data-calories="247" data-carbs="41" data-default-weight="30" data-fat="2.5" data-protein="8.8" data-saturatedfat="0.5">
-									<span>Pan integral</span>
+								<div class="food-item" data-calories="221" data-carbs="45" data-default-weight="125" data-fat="1.7" data-protein="9.1" data-saturatedfat="0.9">
+									<span>Pan integral carrefour </span>
 									<div class="food-quantity">
 										<input class="quantity-input" min="1" type="number" value="1"> <button class="details-btn" onclick="toggleDetails(this)">+</button> <button onclick="addPredefinedFood(this)">Agregar</button>
 									</div>
 									<div class="food-details">
-										<p>Kilocalorías: 247 kcal</p>
-										<p>Proteínas: 8.8 g</p>
-										<p>Grasas: 2.5 g</p>
-										<p>Grasas saturadas: 0.5 g</p>
-										<p>Carbohidratos: 41 g</p>
-										<p>Peso por unidad: 30 g (1 rebanada)</p><input class="weight-input" min="1" placeholder="Peso en gramos" type="number" value="30">
+										<p>Kilocalorías: 221 kcal</p>
+										<p>Proteínas: 9.1 g</p>
+										<p>Grasas: 1.7 g</p>
+										<p>Grasas saturadas: 0.9 g</p>
+										<p>Carbohidratos: 45 g</p>
+										<p>Peso por unidad: 125 g (media barra)✅</p><input class="weight-input" min="1" placeholder="Peso en gramos" type="number" value="30">
 									</div>
 								</div>
 								<div class="food-item" data-calories="259" data-carbs="48.3" data-default-weight="30" data-fat="3.3" data-protein="8.5" data-saturatedfat="0.4">
@@ -2266,6 +2280,20 @@
 												<p>Peso por unidad: 200 g (1 taza cocida)</p><input class="weight-input" min="1" placeholder="Peso en gramos" type="number" value="200">
 											</div>
 										</div>
+												<div class="food-item" data-calories="389" data-carbs="83" data-default-weight="7" data-fat="2.1" data-protein="8" data-saturatedfat="0.4">
+							<span>tortitas de arroz</span>
+							<div class="food-quantity">
+								<input class="quantity-input" min="1" type="number" value="1"> <button class="details-btn" onclick="toggleDetails(this)">+</button> <button onclick="addPredefinedFood(this)">Agregar</button>
+							</div>
+							<div class="food-details">
+								<p>Kilocalorías: 389 kcal</p>
+								<p>Proteínas: 8 g</p>
+								<p>Grasas: 2.1 g</p>
+								<p>Grasas saturadas: 0.4 g</p>
+								<p>Carbohidratos: 83 g</p>
+								<p>Peso por unidad: 7 g</p><input class="weight-input" min="1" placeholder="Peso en gramos" type="number" value="7">
+							</div>
+						</div>
 										<div class="food-item" data-calories="164" data-carbs="27" data-default-weight="200" data-fat="2.6" data-protein="9" data-saturatedfat="0.3">
 											<span>Garbanzos cocidos</span>
 											<div class="food-quantity">
