--- a/calorias.html
+++ b/calorias.html
@@ -241,7 +241,7 @@
 					0
 				</div>
 				<div class="sub-value">
-					de 140 g
+					de 150 g
 				</div>
 			</div>
 		</div>
@@ -252,7 +252,7 @@
 					0
 				</div>
 				<div class="sub-value">
-					de 55 g
+					de 80 g
 				</div>
 			</div>
 		</div>
@@ -274,7 +274,7 @@
 					0
 				</div>
 				<div class="sub-value">
-					de 540 g
+					de 300 g
 				</div>
 			</div>
 		</div>
@@ -1832,18 +1832,18 @@
 							</div>
 							<div class="meal-content" id="panes">
 								<input class="search-box" onkeyup="filterFoods('panes', this.value)" placeholder="Buscar panes..." type="text">
-								<div class="food-item" data-calories="266" data-carbs="50.6" data-default-weight="25" data-fat="3.3" data-protein="7.6" data-saturatedfat="0.7">
+								<div class="food-item" data-calories="265" data-carbs="55" data-default-weight="125" data-fat="1.2" data-protein="8.5" data-saturatedfat="0.2">
 									<span>Pan blanco</span>
 									<div class="food-quantity">
 										<input class="quantity-input" min="1" type="number" value="1"> <button class="details-btn" onclick="toggleDetails(this)">+</button> <button onclick="addPredefinedFood(this)">Agregar</button>
 									</div>
 									<div class="food-details">
-										<p>Kilocalorías: 266 kcal</p>
-										<p>Proteínas: 7.6 g</p>
-										<p>Grasas: 3.3 g</p>
-										<p>Grasas saturadas: 0.7 g</p>
-										<p>Carbohidratos: 50.6 g</p>
-										<p>Peso por unidad: 25 g (1 rebanada)</p><input class="weight-input" min="1" placeholder="Peso en gramos" type="number" value="25">
+										<p>Kilocalorías: 265 kcal</p>
+										<p>Proteínas: 8.5 g</p>
+										<p>Grasas: 1.2 g</p>
+										<p>Grasas saturadas: 0.2 g</p>
+										<p>Carbohidratos: 55 g</p>
+										<p>Peso por unidad: 125 g ✅(media barra)</p><input class="weight-input" min="1" placeholder="Peso en gramos" type="number" value="125">
 									</div>
 								</div>
 								<div class="food-item" data-calories="221" data-carbs="45" data-default-weight="125" data-fat="1.7" data-protein="9.1" data-saturatedfat="0.9">
@@ -2753,10 +2753,10 @@
 				<script>
 					// Definir máximos
 					                                        const maxCalories = 2600;
-					                                        const maxProtein = 140;
-					                                        const maxFat = 55;
+					                                        const maxProtein = 150;
+					                                        const maxFat = 80;
 					                                        const maxSaturatedFat = 20;
-					                                        const maxCarbs = 540;
+					                                        const maxCarbs = 300;
 					                                        
 					                                        // Cargar datos del localStorage
 					                                        let totalCalories = parseFloat(localStorage.getItem('totalCalories')) || 0;
